bindings/c/include/efb.h

typedef enum {
  Arinc424,
  OpenAir,
} EfbInputFormat;
/// The Flight Management System (FMS).
///
/// This type wraps the [FMS] which is the integral system of this library. The
/// FMS holds all information like the navigation data or the route.
typedef struct EfbFMS EfbFMS;
/// The [Route] to fly.
///
/// This type is a wrapper around the [Route] with an initial cruise speed,
/// level and all legs along the route.
///
/// The [`efb_route_legs_first`] and [`efb_route_legs_next`] functions return a
/// leg of the route and can be used to iterate over the route:
///
/// ```
/// for (const EfbLeg *leg = efb_route_legs_first(route);
///      leg != NULL;
///      leg = efb_route_legs_next(route))
/// ```
typedef struct EfbRoute EfbRoute;
/// Creates and returns a new FMS.
///
/// # Safety
///
/// The caller is responsible to free the allocated FMS by calling efb_fms_free.
EfbFMS *
efb_fms_new(void);
/// Frees the memory of the allocated FMS.
void
efb_fms_free(EfbFMS *fms);
/// Reads the string which is in the fmt into the navigation database.
///
/// # Safety
///
/// It is up to the caller to guarantee that `s` points to a valid string.
void
efb_fms_nd_read(EfbFMS *fms, const char *s, EfbInputFormat fmt);
/// Reads the file at the path which is in the fmt into the navigation database.
///
/// # Safety
///
/// It is up to the caller to guarantee that `path` points to a valid string.
void
efb_fms_nd_read_file(EfbFMS *fms, const char *path, EfbInputFormat fmt);
/// Decodes the route and enters it into the FMS.
///
/// # Safety
///
/// It is up to the caller to guarantee that `route` points to a valid string.
void
efb_fms_decode(EfbFMS *fms, const char *route);
/// Returns a reference to the FMS route.
///
/// # Safety
///
/// It's up to the caller to unref the returned pointer.
EfbRoute *
efb_fms_route_ref(EfbFMS *fms);
/// Decreases the reference count of the route.
void
efb_fms_route_unref(EfbRoute *route);